<resources>
    <string name="app_name">glucosereader</string>

    <string name="error_reading_glucose">Не удалось считать значение. Попробуйте удерживать телефон у датчика дольше.</string>
    <string name="error_empty_glucose">Значения не найдены</string>

    <string name="button_add_value">Экспортировать историю</string>

    <string name="dlg_notification_title">Установка напоминаний</string>
    <string name="dlg_notification_description">Выберите интервал отправки уведомлений. Значения указаны в минутах.</string>
    <string name="dlg_notification_progress_start">0</string>
    <string name="dlg_notification_progress_end">480</string>
    <string name="dlg_notification_submit">Установить</string>
    <string name="dlg_notification_cancel">Отменить</string>

    <string name="glucose_values">Значения глюкозы</string>
    <string name="path_choosing_cancelled">Выбор директории отменен</string>
    <string name="file_correct_operation">Файл успешно сохранен</string>
    <string name="file_incorrect_operation">Не удалось записать файл, попробуйте позже</string>
</resources>